Fixed Mobile Sizing
- It now will look perfect down to 320px
- Fixed the main logo in the jumbotron being too wide
- Fixed the text logo in the footer being too wide
- Fixed the logo in the jumbotron
- Added left/right margins to the calculator divs so that the text
doesn't go to the edge

--- a/css/custom.css
+++ b/css/custom.css
@@ -232,7 +232,9 @@ footer p {
   color: black;
 }
 
-
+footer > div > img {
+  width: 100%;
+}
 
 
 /* Responsive styling*/
@@ -245,29 +247,12 @@ footer p {
     right: 10px;
   }
 
-  .middle-logo img {
-  	width: 10%
-  }
-
-  .bottom-logo img {
-  width: 35%;
-  }
-
-}
-
 }
 
 @media (max-width: 992px) {
 
   .top-logo img {
     width: 80%;
-  }
-   .middle-logo img {
-  	width: 15%
-  }
-  
-  .bottom-logo img {
-  width: 30%;
   }
 }
 
@@ -276,12 +261,9 @@ footer p {
   .top-logo img {
     width: 80%
   }
-  .middle-logo img {
-  	width: 20%
-  }
   
-  .bottom-logo img {
-  width: 40%;
+  .jumbotron{
+    min-height: 400px;
   }
 }
 
@@ -289,7 +271,31 @@ footer p {
 	.more-tools img {
 		width: 80%;
 	}
+  
+  #nav_logo_text{
+    /*  We dont want the nabvar text logo to show up on small screens since it wont fit  */
+    display: none;
+  }
+  
+  .top-logo > img {
+      min-width: 320px;
+      left: 0px;
+  }
+  
+  .jumbotron {
+    padding-left:  0px;
+    padding-right: 0px;
+    min-height: 400px;
+  }
+  
+  .container {
+    padding-left:  0px;
+    padding-right: 0px;1
 }
+  .row {
+    margin-right: 15px;
+    margin-left: 15px;
+  
 
 @media (max-width: 400px) {
 
@@ -297,7 +303,7 @@ footer p {
   	margin-bottom: 0px;
   }
 
-  .middle-logo {
+  .middle-logo img{
     margin-top: 0px;
   }
 
